--- a/.github/workflows/RunTests.yml
+++ b/.github/workflows/RunTests.yml
@@ -1,10 +1,12 @@
 Tname: Run Tests
 
 on:
-  pull_request:
+  push:
     branches:
       - main
       - dev
+  pull_request:
+    types: [opened, synchronize, reopened]
 
 jobs:
   test:
