--- a/.github/workflows/RunTests.yml
+++ b/.github/workflows/RunTests.yml
@@ -15,14 +15,18 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
+        working-directory: ./app
 
       - name: Set up Node.js
         uses: actions/setup-node@v3
+        working-directory: ./app
         with:
           node-version: '14'
 
       - name: Install dependencies
+        working-directory: ./app
         run: npm install
 
       - name: Run Jest tests
+        working-directory: ./app
         run: npm test
