--- a/.github/workflows/RunTests.yml
+++ b/.github/workflows/RunTests.yml
@@ -1,30 +1,30 @@
-name: Run Tests
+# name: Run Tests
 
-on:
-  push:
-    branches:
-      - main
-      - dev
-  pull_request:
-    types: [opened, synchronize, reopened]
+# on:
+#   push:
+#     branches:
+#       - main
+#       - dev
+#   pull_request:
+#     types: [opened, synchronize, reopened]
 
-jobs:
-  test:
-    runs-on: ubuntu-latest
+# jobs:
+#   test:
+#     runs-on: ubuntu-latest
 
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v2
+#     steps:
+#       - name: Checkout repository
+#         uses: actions/checkout@v2
 
-      - name: Set up Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: '18'
+#       - name: Set up Node.js
+#         uses: actions/setup-node@v3
+#         with:
+#           node-version: '18'
 
-      - name: Install dependencies
-        working-directory: ./app
-        run: npm install
+#       - name: Install dependencies
+#         working-directory: ./app
+#         run: npm install
 
-      - name: Run Jest tests
-        working-directory: ./app
-        run: npm test
+#       - name: Run Jest tests
+#         working-directory: ./app
+#         run: npm test
