--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,6 @@
 sonar.projectKey=TQS-Project-Restaurant_S-C-DS-Nextjs
 sonar.organization=tqs-project-restaurant
-
+sonar.sources= src/
 # This is the name and version displayed in the SonarCloud UI.
 #sonar.projectName=S-C-DS-Nextjs
 #sonar.projectVersion=1.0
