--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
       dockerfile: .docker/Dockerfile
     volumes:
         - ./app:/app
-        - ./app/node_modules:/app/node_modules
-        - ./app/.next:/app/.next
+        - /app/node_modules
+        - /app/.next
     ports:
       - 3000:3000
