--- a/app/package.json
+++ b/app/package.json
@@ -13,7 +13,8 @@
     "@babel/preset-typescript": "^7.24.1",
     "next": "14.2.3",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "swr": "^2.2.5"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.4.5",
