--- a/.docker/Dockerfile
+++ b/.docker/Dockerfile
@@ -3,6 +3,8 @@ FROM node:22
 WORKDIR /app
 COPY ./app/package*.json ./
 
+ENV NEXT_PUBLIC_IP_ADDRESS=http://localhost:8080
+
 RUN npm install
 COPY . .
 EXPOSE 3000
